# gql-test-client

./: Cargo.toml
src/: main.rs
