[package]
name = "gql-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gql_client = "1.0.7"

serde = "1.0.151"

serde_json = "1.0.90"

tokio = { version = "1.23.0", features = ["full"] }

futures = { version = "0.3", default-features = true }
